ocaml-batteries (0.20090403+git4CA4770-1) UNRELEASED; urgency=low

  * new upstream snapshot, commit 4CA4770
  * debian/rules: set archive sections to "ocaml" for lib*ocaml*
  * README.Debian: point to batteries-enabled command wrappers
  * debian/control: add ${misc:Depends} to ocaml-batteries-included

 -- Stefano Zacchiroli <zack@debian.org>  Thu, 02 Apr 2009 15:26:22 +0200

ocaml-batteries (0.20090401+gitE192725-1) unstable; urgency=low

  * new snapshot, upstream Git commit E192725
    - includes all changes of batteries approaching beta 1
  * uploading to unstable
  * debian/patches/
    - new patch debian/libdir which set Debian-specific installation
      paths used at runtime by batteries wrappers
  * debian/rules:
    - pass -byte-plugin to ocamlbuild when ocamlopt is not
      available, fixes FTBFS on non-native archs. (Closes: #505490)
    - use ocaml.mk as a CDBS "rules" snippet
    - use tg2quilt.mk snippet (shipped by topgit) to generated patches
    - run autoconf upon build (interim for Git snapshot releases only)
  * debian/control:
    - add build-dep on ocamlnet (Closes: #515792)
    - add build-dep on autoconf
    - bump Standards-Version to 3.8.1 (no changes needed)
  * debian/README.source: point to existing documents
  * debian/copyright: reference version-specific common license file

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 01 Apr 2009 15:38:37 +0200

ocaml-batteries (0.20081112+gitBB342A7-1) experimental; urgency=low

  * new snapshot, now following upstream Git
    (commit bb342a7, i.e., alpha 2 + minor bugfixes)
  * debian/patches:
    - remote patch features/flexi-build (integrated upstream)
  * debian/control: correct spelling of "metapackage"
  * debian/control: fix sections: -dev in libdevel, -doc in doc
  * debian/rules: port to new upstream, which is now using autotools
  * debian/rules: specify the clean target
  * symlink more doc files from /usr/share/doc/*-dev/ to *-doc/